--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+
 /* footer: changed body margin (35px bottom is height of footer) */
 /* footer: added styling that targerst html */
 html {
@@ -105,11 +106,6 @@ border-style: solid none;
 z-index: 10;
 }
 
-.space {
-padding:0px;
-}
-
-
 nav.main-nav a {
 font-family: 'Raleway', serif;
 font-size: 150%;
@@ -206,7 +202,7 @@ text-align: center
 
 #about  {
 height: 800px;
-Background: #87CEFA;
+Background: #CAEBF2;
 text-align: center
 }
 
@@ -227,11 +223,6 @@ text-align: center;
 width: 100%;
 }
 
-#webdevnotes  {
-height: 1000px;
-Background: #F0FFFF;
-}
-
 /* Close page sections */
 
 /* land Page Title section */
@@ -250,8 +241,8 @@ Background: #F0FFFF;
     }
 
     header {
-    background-color: #87CEFA;
-    padding-bottom: 20px;
+      background-color: #87CEFA;
+      padding-bottom: 20px;
     }
 
     .clearfix {
@@ -284,17 +275,11 @@ Background: #F0FFFF;
     }
 
 #profile {
-text-align: center;
-border-radius: 100%;
-margin-top: 2%;
-margin-bottom: 2%;
-max-width: 28%;
-display: block;
-margin-left: auto;
+max-width: 300px;
 margin-right: auto;
-border-style: solid;
-border-width: 2px;
-border-color: #FF7B3A;
+border: 1px solid transparent;
+border-radius: 4px;
+padding-bottom: 20px;
 }
 
 span {
@@ -302,15 +287,20 @@ span {
   padding-right: 50px;
 }
 
+.topicHeading {
+  text-align: left;
+}
+
 
 p {
-padding-top: 0%;
-margin: 0;
+  font-size: 115%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin: 0;
 }
 
 .heading-space {
 padding-top: 30px;
-background-color: #87CEFA;
 }
 
 .heading {
@@ -323,22 +313,90 @@ color:  black;
 text-shadow: 2px 2px 2px #FF7B3A;
 }
 
-#bio {
-text-align: middle;
-background: #87CEFA;
-padding: 0px;
-margin: 0% 10% 10% 10%;
-font-family: 'Raleway', serif;
-font-size: 150%;
-color:  black;
-text-shadow: 1px 1px 1px #a6a6a6;
-
+.bio {
+  display: flex;
+  flex-flow: row wrap;;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: center;;
+  background: #CAEBF2;
+  font-family: 'Raleway', serif;
+  color:  black;
 }
 
-.smalltxt {
-font-size: 200%;
-font-style: italic;
+.left {
+  width: 850px;
+  text-align: left;
+  height: auto;
 }
+
+.right {
+  width: 300px;
+  height: auto;
+  margin-left: 30px;
+}
+
+/* twitter button */
+#twitterbutton {
+  font-family: Arial,"Helvetica Neue",sans-serif;
+  background-color: #0084b4;
+  color: white;
+  margin-top: 5px;
+  padding: 6px 12px;
+  width: 200px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.4;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+#twitterbutton a {
+    text-decoration: none;
+    color: white;
+}
+
+#twitterbutton:hover {
+  font-family: Arial,"Helvetica Neue",sans-serif;
+  background-color: #FF7B3A;
+  color: black;
+  padding: 6px 12px;
+  width: 200px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1.4;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    transition: 0.5s;
+}
+
 
 /* Webdev page start */
 
@@ -433,328 +491,3 @@ font-style: italic;
 	position: absolute; left: 100%; top:0;
   width: 300px;
 }
-
-/* webdev page end */
-
-/* web dev notes start */
-
-.webDevNotes {
-  width: 100%;
-  background-color: #87CEFA;
-  font-family: 'Raleway', serif;
-}
-
-/* side bar start */
-
-.sidebar {
-  background-color: #F0FFFF;
-  width: 20%;
-  float: right;
-  height: 1700px;
-  margin: 5% 8% 0 0;
-  padding: 1%;
-  clear: left;
-  text-align: left;
-}
-
-.studyGroup {
-  background-color: #F0FFFF;
-  padding-bottom: 1rem;
-  font-family: 'Raleway', serif;
-}
-
-.studygroup h2 {
-  padding-bottom: 1rem;
-}
-.required {
-  font-size: 0.9rem;
-  font-family: 'Raleway', serif;
-  background: #d2edfd;
-  border: 1px solid #999;
-  width: 11.5rem;
- -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
--moz-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.3);
-padding: 5px 5px; /* padding inside text box */
-margin: 10px 0;
-cursor: pointer;
-}
-
-input:focus {
-  background: white;
-  border: 1px solid #FF7B3A;
-}
-
-#mc_embed_signup .button {
-  width: 50px;
-  height: 28px;
-  margin-top: 20px;
-  background: #d2edfd;
-  color: #919191;
-  text-shadow: 0.5px 0.5px 0.5px black;
-  font-family:'Raleway', serif;
-  font-size: 80%;
-  border: 1px solid #999;
-  cursor: pointer;
-}
-
-#mc_embed_signup .button:hover {
-  width: 50px;
-  height: 28px;
-  margin-top: 20px;
-  background: #FF7B3A;
-  color: white;
-  text-shadow: 1px 1px 1px #a6a6a6;
-  font-family:'Raleway', serif;
-  font-size: 80%;
-  border: 1px solid #999;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-#mc_embed_signup form {
-  margin: 0;
-}
-
-
-.clear {
-  display: inline;
-}
-
-.mc-field-group {
-  display:inline;
-  font-size: 1.1rem;
-}
-
-#twitterbutton {
-  font-family: Arial,"Helvetica Neue",sans-serif;
-  background-color: #0084b4;
-  color: white;
-  padding: 6px 12px;
-  width: 15rem;
-    margin-bottom: 0;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 1.4;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
-}
-
-
-
-#twitterbutton a {
-    text-decoration: none;
-    color: white;
-}
-
-#twitterbutton:hover {
-  font-family: Arial,"Helvetica Neue",sans-serif;
-  background-color: #FF7B3A;
-  color: black;
-  padding: 6px 12px;
-  width: 15rem;
-    margin-bottom: 0;
-    font-size: 14px;
-    font-weight: normal;
-    line-height: 1.4;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: middle;
-    -ms-touch-action: manipulation;
-    touch-action: manipulation;
-    cursor: pointer;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    background-image: none;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    transition: 0.5s;
-}
-
-
-#archive {
-  margin-top: 10rem;
-}
-
-#sidebarlist {
-  list-style: none;
-  padding: 0;
-}
-
-.sidebarlistHeading {
-  text-align: left;;
-}
-
-.clear {
-  clear: both;
-}
-
-.topicheading {
-  font-family: 'Raleway', serif;
-  font-size: 160%;
-  text-shadow: 1px 1px 1px #FF7B3A;
-  margin:0;
-  text-align: left;
-  padding:0;
-}
-
-.topicsubheading {
-  font-size: 140%;
-  margin-bottom: 0;
-}
-
-.articles {
-  width:46%;
-  margin: 4% 1% 5% 16%;
-  float: left;
-  background-color: #F0FFFF;
-  font-size: 130%;
-  color: black;
-  height: 3000px;
-  font-family: 'Raleway', serif;
-}
-
-textarea {
-  padding-left: 10rem;
-  margin: 3% 0 1% 0;
- background-color: #F0FFFF;
- font-family: 'Raleway', serif;
- font-size: 130%;
- border: none;
- overflow: hidden;
-}
-
-.smalltxtarea {
- width: 35rem;
- height: 8rem;
-}
-
-.bigtxtarea {
-width: 40rem;
-height:13.8rem;
-}
-
-.widetxtarea {
- width: 55rem;
- height: 4rem;
-}
-
-
-.notes h4 {
-  margin: 0;
-  padding: 0;
-}
-
-.articles p {
-  padding: 2% 0;
-}
-
-.topic {
-  padding: 0;
-  margin: 1% auto 15%;
-  font-size: 100%;
-}
-
-.firstParagraph {
-  font-size: 120%;
-  margin-top: 5%;
-}
-
-#box1 {
-  max-width: 500px;
-  margin: 20px auto;
-  border-style: solid;
-  border-width: 1px;
-  padding: 1%;
-}
-
-#box2 {
-  max-width: 500px;
-  margin: 20px auto;
-  padding: 50px;
-  border-style: solid;
-  border-width: 1px;
-
-}
-
-#box3 {
-  max-width: 500px;
-  margin: 20px auto;
-  border-style: solid;
-   padding: 1%;
-  border-width: 1px;
-    -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-#box4 {
-  max-width: 500px;
-  margin: 20px auto;
-  padding: 50px;
-  border-style: solid;
-  border-width: 1px;
-    -webkit-box-sizing: border-box;
-     -moz-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
-#floatExampleImg {
-  float: right;
-  margin-left: 20px;
-  max-width: 15%;
-  mas-height: 15%;
-}
-
-#example1 {
-  max-width: 700px;
-  margin: 0 auto;
-  font-size: 120%;
-}
-
-#example2 {
-  max-width: 400px;
-  margin: 0 auto;
-  font-size: 120%;
-}
-
-.date {
-  float: right;
-  font-size: 70%;
-  margin-right: 20%;
-}
-
-#pageheading {
-
-}
-
-.quote {
-  max-width: 500px;
-  margin: 0 auto;
-  font-size: 130%;
-}
-
-.topicheading a {
-  font-size: 50%;
-  margin: 0 0.5%;
-}
-
-
-
-
-/* web deb notes end /*
-
-/* contact page start */
