fixing landing image .2

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,7 +192,7 @@ color: #FF7B3A;
 #page1  {
 height: 630px;
 Background:
-  url(../images/landing.jpg) no-repeat center center fixed;
+  url(https://i.imgsafe.org/fa562cca55.jpg) no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
