--- a/css/styles.css
+++ b/css/styles.css
@@ -96,12 +96,10 @@ flex-wrap: wrap;
 justify-content:center;
 text-align: center;
 padding-top: 5px;
-padding-bottom: 0px;
+padding-bottom: 5px;
 width: 100%;
 background-color: #043757;
 opacity: 1;
-font-size: 100%;
-height: 35px;
 border-style: solid none;
 z-index: 10;
 }
@@ -114,7 +112,7 @@ color: #919191;
 font-weight: 400;
 text-decoration: none;
 display: inline-block;
-padding: 0px 30px;
+padding: 0px 90px;
 letter-spacing: .1em;
 }
 
@@ -146,57 +144,17 @@ color: #FF7B3A;
 
 /* close nav bar */
 
-/*media queries to fix layout on smaller devices */
-
-@media all and (min-width: 360px) and (max-width: 480px) {
-  header {
-      padding:5px 0 55px;
-  }
-
-  nav.main-nav a {
-      font-size:17px;
-  }
-
-  nav.main-nav {
-      height:55px;
-  }
-
-  .container {
-      margin:0 auto;
-      width:50%;
-
-  }
-}
-
-@media screen and (max-width: 480px) {
-  header {
-      padding:5px 0 55px;
-  }
-
-  nav.main-nav a {
-      font-size:17px;
-  }
-
-  nav.main-nav {
-      height:55px;
-  }
-
-  .container {
-      width:92%;
-  }
-}
-
-/* close media queries */
 
 /* page sections */
 #page1  {
 height: 630px;
 Background:
-  url(https://i.imgsafe.org/fa562cca55.jpg) no-repeat center center fixed;
+  url(https://s13.postimg.org/3k7iujxh3/DSC_0444_2.jpg) no-repeat center center fixed;
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
 background-size: cover;
+text-align: center
 }
 
 #about  {
@@ -225,13 +183,11 @@ width: 100%;
 /* Close page sections */
 
 /* land Page Title section */
-    #title {
+  .title {
       padding: 0;
-      width: 700px;
       margin: 0 auto;
       text-align: center;
       font-family: 'Shrikhand', cursive;
-      font-size: 600%;
       color:  black;
       text-shadow: 3px 3px 2px #FF7B3A;
       letter-spacing: .03em;
@@ -254,7 +210,6 @@ width: 100%;
     padding: 0px;
     margin: 0px;
     font-family: 'Raleway', serif;
-    font-size: 150%;
     color:  black;
     text-shadow: 0.5px 0.5px 0.5px #FF7B3A;
     }
@@ -262,14 +217,12 @@ width: 100%;
     .subtitle-top {
     padding-top: 1%;
     float: left;
-    margin-left: 20%;
     margin-bottom: -1%;
     }
 
     .subtitle-bottom {
     float: right;
     padding-top: 0px;
-    margin-right: 20%;
     margin-top: -1.9%;
     }
 
@@ -299,7 +252,7 @@ p {
 }
 
 .heading-space {
-padding-top: 30px;
+  padding-top: 20px;
 }
 
 .heading {
@@ -314,20 +267,20 @@ text-shadow: 2px 2px 2px #FF7B3A;
 
 .bio {
   display: flex;
-  flex-flow: row wrap;;
+  flex-flow: row wrap;
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
   display: -webkit-flex;
   -webkit-flex-flow: row wrap;
-  justify-content: center;;
+  justify-content: center;
   background: #CAEBF2;
   font-family: 'Raleway', serif;
   color:  black;
 }
 
 .left {
-  width: 850px;
+  width: 720px;
   text-align: left;
   height: auto;
 }
@@ -336,6 +289,17 @@ text-shadow: 2px 2px 2px #FF7B3A;
   width: 300px;
   height: auto;
   margin-left: 30px;
+}
+
+.buttons {
+  display: flex;
+  flex-flow: column;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  -webkit-flex-flow: column;
+  align-items: center;
 }
 
 /* twitter button */
@@ -424,11 +388,17 @@ text-shadow: 2px 2px 2px #FF7B3A;
 }
 
 .webDevNav {
-  text-align: center;
+  display: flex;
+  flex-flow: row;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  -webkit-flex-flow: row;
+  justify-content: center;
   position: relative;
-  display: inline-block;
-  padding-top: 0;
-  margin-top: 0;
+  padding: 0;
+  margin: 0;
   width: 100%;
   background: #043757;
 }
@@ -488,5 +458,5 @@ text-shadow: 2px 2px 2px #FF7B3A;
 
 .webDevNav ul ul ul {
 	position: absolute; left: 100%; top:0;
-  width: 300px;
+  width: 230px;
 }
